[tool.poetry]
name = "ca_api_wrapper"
version = "2.0.5"
description = ""
authors = ["Vick Mu <arbi3400@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ca_api_wrapper" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
